--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: Poppins;
-    src: url(/fonts/Poppins-Regular.ttf);
+    src: url(/assets/fonts/Poppins-Regular.ttf);
     font-style: normal;
     font-weight: normal;
 }
