--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
     font-family: Poppins;
     src: url(/assets/fonts/Poppins-Regular.ttf);
     font-style: normal;
     font-weight: normal;
-}
+} */
